[gd_scene load_steps=4 format=3 uid="uid://c2lnom8snn3s2"]

[ext_resource type="Script" path="res://UI/Question.gd" id="1_eab2x"]
[ext_resource type="FontFile" uid="uid://j71bxuhfo0u7" path="res://Assets/Fonts/data-latin.ttf" id="2_sm3vg"]
[ext_resource type="Script" path="res://UI/GameButton.gd" id="3_lll5r"]

[node name="Exit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eab2x")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.901961)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2

[node name="QuestionLabel" type="Label" parent="CenterContainer/GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 48)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sm3vg")
theme_override_font_sizes/font_size = 24
text = "EXIT_TO_MAIN_MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/GridContainer"]
layout_mode = 2
columns = 2

[node name="CancelButton" type="Button" parent="CenterContainer/GridContainer/GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 48)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_sm3vg")
theme_override_font_sizes/font_size = 24
text = "CANCEL"
script = ExtResource("3_lll5r")

[node name="YesButton" type="Button" parent="CenterContainer/GridContainer/GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 48)
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_sm3vg")
theme_override_font_sizes/font_size = 24
text = "YES"
script = ExtResource("3_lll5r")

[connection signal="pressed" from="CenterContainer/GridContainer/GridContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="CenterContainer/GridContainer/GridContainer/YesButton" to="." method="_on_yes_button_pressed"]
